update README to include description, tech used, and setup requirements

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,6 +10,14 @@ a {
   
 }
 
+.container{
+  display: grid;
+  grid-template-areas: 
+  'header header header header header header'
+  'left'
+  ;
+}
+
 #results {
   font-weight: 600;
   font-size: large;
