add css styling for marquee to show up faster

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -75,7 +75,7 @@ p {
   white-space: nowrap;
   overflow: hidden;
   box-sizing: border-box;
-  animation: marquee 50s  infinite;
+  animation: marquee 20s linear infinite;
 }
 
 #news-headline:hover {
